Fixed a bug where moving the map would break the pin's location
Added footer text

--- a/styles.css
+++ b/styles.css
@@ -194,8 +194,20 @@ html, body {
     border-radius: 20px;
 }
 .footer{
+    display: flex;
+    justify-content: space-around;
+    flex:1;
     background-color: #12418d;
-    min-height: 4vh;
+    padding: 1rem;
+    font-size: 0.8rem;
+}
+.footer-text{
+    margin: 0;
+    color: white;
+}
+.footer-text a{
+    text-decoration: none;
+    color: #03bf55;
 }
 .mobile-hint{
     display: none;
@@ -211,6 +223,10 @@ html, body {
     }
     .search-form-container{
         display: none;
+    }
+    .footer{
+        flex-direction: column;
+        text-align: center;
     }
     .main-container {
         flex-direction: column;
